syntax = "proto3";

option java_package = "com.dawidk.core.datastore";
option java_multiple_files = true;

message UserCredentials {
  string userId = 1;
  string userDisplayName = 2;
  string userEmail = 3;
}